--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
 	<h1>Hi Dude!</h1>
 	<p>Your face like a cow. LOL!</p>
-	<p>Tanda tangan orang keren <br> <img src="https://iqbalmauludy.co.id/assets/common/img/signature.png" alt"Signature"></p>
+	<p>Tolong di isi testimonialnya gan. </p>
+	<div class="fb-comments" data-href="http://iqbalmauludy.co.id" data-numposts="5"></div>
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/id_ID/sdk.js#xfbml=1&version=v2.8&appId=169609276856468";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </body>
 </html>
