--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1>Hi Dude!</h1>
 	<p>Your face like a cow. LOL!</p>
 	<p>Tolong di isi testimonialnya gan. </p>
-	<div class="fb-comments" data-href="http://iqbalmauludy.co.id" data-numposts="5"></div>
+	<div class="fb-comments" data-href="http://iqbalmauludy.co.id" data-numposts="5" order_by="default"></div>
 	<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
