--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<h1>Hi Dude!</h1>
-	<p>Your face like a cow. LOL!</p>
-	<p>Tolong di isi testimonialnya gan. </p>
+	<p>Halaman testimonial. Official website: <a href="https://iqbalmauludy.co.id" target="_blank">https://iqbalmauludy.co.id</a></p>
 	<div class="fb-comments" data-href="http://iqbalmauludy.co.id" data-numposts="5" data-order_by="default"></div>
 	<div id="fb-root"></div>
 <script>(function(d, s, id) {
