--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<p>Halaman testimonial. Official website: <a href="https://iqbalmauludy.co.id" target="_blank">https://iqbalmauludy.co.id</a></p>
-	<div class="fb-comments" data-href="http://iqbalmauludy.co.id" data-numposts="5" data-order_by="social"></div>
+	<div class="fb-comments" data-href="http://iqbalmauludy.co.id" data-numposts="5" data-order_by="reverse_time"></div>
 	<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
