--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<p>Halaman testimonial ini merupakan bagian dari Iqbal Mauludy. Official website: <a href="https://iqbalmauludy.co.id" target="_blank">https://iqbalmauludy.co.id</a></p>
+	<p>Halaman testimonial ini merupakan bagian dari Iqbal Mauludy. Official website: <a href="https://iqbalmauludy.com" target="_blank">https://iqbalmauludy.com</a></p>
 	<div class="fb-comments" data-href="http://iqbalmauludy.co.id" data-numposts="5" data-order_by="reverse_time"></div>
 	<div id="fb-root"></div>
 <script>(function(d, s, id) {
